--- a/app/src/main/res/layout/activity_section_f7_s3.xml
+++ b/app/src/main/res/layout/activity_section_f7_s3.xml
@@ -267,7 +267,7 @@
                             android:hint="##.##"
                             android:inputType="number"
                             android:maxLength="3"
-                            android:onTextChanged="@{callback::f7303OnTextChanged}"
+                            android:onTextChanged="@{callback::f7303aOnTextChanged}"
                             android:text="@={form.f7303a}"
                             app:mask="##.##"
                             app:maxValue="40.00"
@@ -336,23 +336,23 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_weight="2"
                             android:text="@string/f7304" />
+
+                        <com.edittextpicker.aliazaz.EditTextPicker
+                            android:id="@+id/f7304"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:hint="@string/f7304"
+                            android:inputType="number"
+                            android:maxLength="3"
+                            android:onTextChanged="@{callback::f7304OnTextChanged}"
+                            android:text="@={form.f7304}"
+                            app:maxValue="100"
+                            app:minValue="1"
+                            app:type="range" />
                     </LinearLayout>
-
-                    <com.edittextpicker.aliazaz.EditTextPicker
-                        android:id="@+id/f7304"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/f7304"
-                        android:inputType="number"
-                        android:maxLength="3"
-                        android:text="@={form.f7304}"
-
-
-                        app:maxValue="100"
-                        app:minValue="1"
-                        app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -381,23 +381,22 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_weight="2"
                             android:text="@string/f7305" />
+
+                        <com.edittextpicker.aliazaz.EditTextPicker
+                            android:id="@+id/f7305"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:hint="@string/f7305"
+                            android:inputType="number"
+                            android:maxLength="3"
+                            android:text="@={form.f7305}"
+                            app:maxValue="100"
+                            app:minValue="1"
+                            app:type="range" />
                     </LinearLayout>
-
-                    <com.edittextpicker.aliazaz.EditTextPicker
-                        android:id="@+id/f7305"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/f7305"
-                        android:inputType="number"
-                        android:maxLength="3"
-                        android:text="@={form.f7305}"
-
-
-                        app:maxValue="100"
-                        app:minValue="1"
-                        app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
