--- a/app/src/main/res/layout/activity_section_f3.xml
+++ b/app/src/main/res/layout/activity_section_f3.xml
@@ -375,6 +375,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            style="@style/sub_labels"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/f3intitle" />
@@ -392,6 +393,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            style="@style/sub_labels"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/f3ininst" />
@@ -428,13 +430,15 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f3201"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
                             <RadioButton
                                 android:id="@+id/f3201a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3201.equals(`1`)}"
                                 android:onClick="@{()->form.setF3201(`1`)}"
@@ -442,7 +446,8 @@
 
                             <RadioButton
                                 android:id="@+id/f3201b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3201.equals(`2`)}"
                                 android:onClick="@{()->form.setF3201(`2`)}"
@@ -481,13 +486,15 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f3202"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
                             <RadioButton
                                 android:id="@+id/f3202a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3202.equals(`1`)}"
                                 android:onClick="@{()->form.setF3202(`1`)}"
@@ -495,7 +502,8 @@
 
                             <RadioButton
                                 android:id="@+id/f3202b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3202.equals(`2`)}"
                                 android:onClick="@{()->form.setF3202(`2`)}"
@@ -551,13 +559,15 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f3301"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
                             <RadioButton
                                 android:id="@+id/f3301a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3301.equals(`1`)}"
                                 android:onClick="@{()->form.setF3301(`1`)}"
@@ -565,7 +575,8 @@
 
                             <RadioButton
                                 android:id="@+id/f3301b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3301.equals(`2`)}"
                                 android:onClick="@{()->form.setF3301(`2`)}"
@@ -716,13 +727,15 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f3303"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
                             <RadioButton
                                 android:id="@+id/f3303a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3303.equals(`1`)}"
                                 android:onClick="@{()->form.setF3303(`1`)}"
@@ -730,7 +743,8 @@
 
                             <RadioButton
                                 android:id="@+id/f3303b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3303.equals(`2`)}"
                                 android:onClick="@{()->form.setF3303(`2`)}"
@@ -769,6 +783,7 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:onCheckedChanged="@{()->f3401.clearCheck() + f3402.clearCheck() + f3403.clearCheck()}"
                             android:id="@+id/f3304"
                             android:layout_width="match_parent"
@@ -776,7 +791,8 @@
 
                             <RadioButton
                                 android:id="@+id/f3304a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3304.equals(`1`)}"
                                 android:onClick="@{()->form.setF3304(`1`)}"
@@ -784,7 +800,8 @@
 
                             <RadioButton
                                 android:id="@+id/f3304b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f3304.equals(`2`)}"
                                 android:onClick="@{()->form.setF3304(`2`)}"
@@ -811,6 +828,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/f3ictitle" />
@@ -828,6 +846,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/f3icetitle" />
@@ -864,6 +883,7 @@
                             </LinearLayout>
 
                             <RadioGroup
+                                android:orientation="horizontal"
                                 android:onCheckedChanged="@{()->f3402.clearCheck() }"
                                 android:id="@+id/f3401"
                                 android:layout_width="match_parent"
@@ -871,7 +891,8 @@
 
                                 <RadioButton
                                     android:id="@+id/f3401a"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f3401.equals(`1`)}"
                                     android:onClick="@{()->form.setF3401(`1`)}"
@@ -879,7 +900,8 @@
 
                                 <RadioButton
                                     android:id="@+id/f3401b"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f3401.equals(`2`)}"
                                     android:onClick="@{()->form.setF3401(`2`)}"
@@ -997,13 +1019,15 @@
                                 </LinearLayout>
 
                                 <RadioGroup
+                                    android:orientation="horizontal"
                                     android:id="@+id/f3403"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content">
 
                                     <RadioButton
                                         android:id="@+id/f3403a"
-                                        android:layout_width="match_parent"
+                                        android:layout_width="0dp"
+                                        android:layout_weight="1"
                                         android:layout_height="wrap_content"
                                         android:checked="@{form.f3403.equals(`1`)}"
                                         android:onClick="@{()->form.setF3403(`1`)}"
@@ -1011,7 +1035,8 @@
 
                                     <RadioButton
                                         android:id="@+id/f3403b"
-                                        android:layout_width="match_parent"
+                                        android:layout_width="0dp"
+                                        android:layout_weight="1"
                                         android:layout_height="wrap_content"
                                         android:checked="@{form.f3403.equals(`2`)}"
                                         android:onClick="@{()->form.setF3403(`2`)}"
@@ -1031,6 +1056,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    style="@style/sub_labels"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="@string/f34inst" />
