--- a/app/src/main/res/layout/activity_section_f5_s4.xml
+++ b/app/src/main/res/layout/activity_section_f5_s4.xml
@@ -68,6 +68,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        style="@style/sub_labels"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/f5s4t1a" />
@@ -168,20 +169,22 @@
                             android:text="@string/f5402" />
                     </LinearLayout>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="@string/f5402t" />
+
                     <RadioGroup
                         android:id="@+id/f5402"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:text="@string/f5402t" />
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/f5402a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5402.equals(`1`)}"
                             android:onClick="@{()->form.setF5402(`1`)}"
@@ -189,7 +192,8 @@
 
                         <RadioButton
                             android:id="@+id/f5402b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5402.equals(`2`)}"
                             android:onClick="@{()->form.setF5402(`2`)}"
@@ -227,20 +231,23 @@
                             android:text="@string/f5403" />
                     </LinearLayout>
 
+                    <TextView
+                        style="@style/sub_labels"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="@string/f5403t" />
+
                     <RadioGroup
                         android:id="@+id/f5403"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:text="@string/f5403t" />
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/f5403a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5403.equals(`1`)}"
                             android:onClick="@{()->form.setF5403(`1`)}"
@@ -248,7 +255,8 @@
 
                         <RadioButton
                             android:id="@+id/f5403b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5403.equals(`2`)}"
                             android:onClick="@{()->form.setF5403(`2`)}"
@@ -1234,6 +1242,7 @@
                             android:text="@string/f5415b" />
 
                         <TextView
+                            style="@style/sub_labels"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
@@ -1294,6 +1303,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+                            style="@style/sub_labels"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
@@ -1316,6 +1326,7 @@
                             android:text="@string/f5416b" />
 
                         <TextView
+                            style="@style/sub_labels"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
